--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "passport-userapp": "^1.1.2",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "ejs": "^1.0.0"
   }
 }
