--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "ejs": "~2.3.1",
+    "ejs": "^1.0.0",
     "express": "~4.12.4",
     "express-session": "^1.14.1",
+    "fcm-node": "^1.0.15",
     "mongoose": "~4.0.4",
     "morgan": "~1.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "passport-userapp": "^1.1.2",
-    "serve-favicon": "~2.2.1",
-    "ejs": "^1.0.0"
+    "serve-favicon": "~2.2.1"
   }
 }
